# maap-organization-buckets

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.json  pyproject.toml  runtime_config.py
.github/workflows/: deploy.yaml
defaults/: bucket_policies.py  lifecycle_rules.py
organizations/geotrees/: bucket_policies.py  lifecycle_rules.py
stacks/: buckets_stack.py  logs_stack.py
